# scattering_sphere

./: .gitignore  README.md  pyproject.toml  scattering_sphere.py
examples/: scatters_tau_2.csv
scattering_sphere/: __main__.py  photon.py
